--- a/Lab6_KarimGuifarro/nbproject/project.properties
+++ b/Lab6_KarimGuifarro/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab6_karimguifarro.Lab6_KarimGuifarro
+main.class=lab6_karimguifarro.inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
